Updated Gallery Api
